objects/amazonconnect__AC_PresenceSyncRule__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Comparator__c</fullName>
        <label>Comparator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>===</fullName>
                    <label>Equal to</label>
                </value>
                <value>
                    <fullName>!==</fullName>
                    <label>Not equal to</label>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                    <label>Greater than</label>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                    <label>Greater than or equal to</label>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                    <label>Less than</label>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                    <label>Less than or equal to</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__CtiAdapter__c</fullName>
        <label>CTI Adapter</label>
        <referenceTo>amazonconnect__AC_CtiAdapter__c</referenceTo>
        <relationshipLabel>Presence Sync Rules</relationshipLabel>
        <relationshipName>PresenceSyncRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Destination__c</fullName>
        <label>Destination</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACPresenceSyncRuleDestination</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__OperandACustom__c</fullName>
        <label>Operand A Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__OperandA__c</fullName>
        <label>Operand A</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACPresenceSyncRuleOperand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__OperandBCustom__c</fullName>
        <label>Operand B Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__OperandB__c</fullName>
        <label>Operand B</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACPresenceSyncRuleOperand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACPresenceSyncRuleSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AC Presence Sync Rule</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Presence Sync Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Presence Sync Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>